--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ migrate_working_dir/
 *.iws
 .idea/
 
-**/lib/firebase_options.dart
+lib/firebase_options.dart
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
